--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,43 @@
+:root {
+  --primary-colour: #ac8968;
+  --secondary-colour: #3e362e;
+  --third-colour: #865d36;
+  --fourth-colour: #a69080;
+  --text-colour: #f2f2f2;
+}
+
 body {
-  background-color: rebeccapurple;
+  background-color: var(--primary-colour);
+}
+
+h1 {
+  color: var(--text-colour);
+}
+.board-container {
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  height: 500px;
+  width: 500px;
+  background-color: bisque;
+}
+.space {
+  background-color: #f2f2f2;
+  border: solid black 0.1rem;
+  text-align: center;
+}
+
+.space-secondary {
+  background-color: var(--fourth-colour);
+}
+
+.space-start {
+  background-color: green;
+}
+
+.space-end {
+  background-color: rgb(228, 2, 2);
+}
+
+.status {
+  color: var(--text-colour);
 }
